--- a/RCES_FinalProject_SL.ipynb
+++ b/RCES_FinalProject_SL.ipynb
@@ -454,9 +454,7 @@
     "\n",
     "GIS lat and lon from:  https://latitude.to/articles-by-country/gl/greenland/43004/summit-camp\n",
     "\n",
-    "AAIS lat and lon from: https://latitude.to/articles-by-country/aq/antarctica/5205/antarctic-ice-sheet\n",
-    "\n",
-    "Distance between lat/lon:  https://stevemorse.org/nearest/distance.php"
+    "AAIS lat and lon from: https://latitude.to/articles-by-country/aq/antarctica/5205/antarctic-ice-sheet\n"
    ]
   },
   {
